# Finshield

./: README.md
BioVerify/: README.md  config.py  main_simple.py  run_server.py
BioVerify/BioVerify/: main.py  pyproject.toml  replit.md
BioVerify/BioVerify/attached_assets/: untitled46_1755241725950.py
BioVerify/BioVerify/backend/: drive_storage.py  ml_engine.py  notifications.py
BioVerify/BioVerify/frontend/: admin.py  app.py
BioVerify/BioVerify/static/: style.css
BioVerify/BioVerify/templates/: dashboard.html
BioVerify/backend/: api.py  models.py
BioVerify/frontend/: dashboard.py
BioVerify/static/: biometrics.js  typing_recorder.js
BioVerify/templates/: auth_interface.html
BioVerify/utils/: helpers.py
